--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -151,9 +151,8 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   
 
   \item \textit{Then, in paragraph 1.3, the complexity of systems with respect to segregation is also problematically described.} \ldots
-  % Emergent behaviour that may lead to segregation is first and foremost a social process, taking social interactions at the local scale (income, housing costs, etc.) and/or at the macro scale (laws, rules, economic system, cultural attitudes, etc.) into account. These interactions can then be associated with the material and relational dimension of geographical spaces. The question remains: what is the role of geographical systems? In this respect, the paper offers some relevant clues such as the MAUP problem or the “uncertain geographic context problem”. 
   
-  $\rightarrow$ see comment A. As for the role of geometric structures in the production of segregation, Banos (2012) has shown that with the same Schelling mechanisms and the same parameter values but different network structures of neighbourhoods (scale-free, regular, etC.) the segregation observed at the end of simulation varied significantly between network structures. This is the kind of approach we systematise here, although with a spatial grid instead of network structures.
+  $\rightarrow$ see comment A. As for the role of geometric structures in the production of segregation, Banos (2012) has shown that with the same Schelling mechanisms and the same parameter values but different network structures of neighbourhoods (scale-free, regular, etc.) the segregation observed at the end of simulation varied significantly between network structures. This is the kind of approach we systematise here, although with a spatial grid instead of network structures.
 
   \medskip
 
@@ -177,7 +176,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   \medskip
  
  
-  \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 “With the Schelling experiment, we found … that polycentric and discontinuous cities appear systematically more segregated than compact cities …” is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }
+  \item \textit{The approach is reductionist and has its strength in reflecting growth at an abstract level nevertheless. The concluding remark in paragraph 5.1 ``With the Schelling experiment, we found \ldots that polycentric and discontinuous cities appear systematically more segregated than compact cities\ldots'' is elusive. Either it is a trivial fact, simply because polycentric cities have more centres and thus, by nature, more opportunities from which segregation can originate. Or, the results can be used as a starting point to dig deeper in geographical reasons, taking social, economic, cultural, and political, but also topographical issues into consideration. This geographical reasoning, however, is outside of the scope of this paper. }
 
   $\rightarrow$ We understand this statement, however we wish to underline that our objective in the discussion of the Schelling results was not to establish a general result on the links between polycentricity and segregation, which are indeed very complex and multidimensional as advocated by the reviewer. Instead, we aimed at showing what kind of results could be obtained using the framework we suggest. If we do not prove that in general, and in empirical context, polycentricity creates more segregation, we obtained, in the modelling context, under Schelling assumptions, that polycentric geometric structures are more often that not associated with segregated patterns, a result which we do not believe to be solely resulting from the fact that more centers leads to more opportunities of segregation (which is true), because it seems also true that monocentric structures, with higher densities, can more easily accommodate heterogeneity of agents within cells, and hence a more patchy type of segregation which can for instance being observed in London. We included a comment in the discussion section, saying that we hope we have convinced people to add spatial sensitivity analysis during the exploration of their model and that specialist of the thematics would see the opportunity to dig deeper into our results.
   
@@ -218,9 +217,7 @@ B. To highlight limitations as well as promising perspectives of improvement, we
   
   \textit{For instance, it would be useful to have suggestions on how to use this methodology to run empirical models. Suppose to have a nice dataset and a case of a urban context to be modelled. Could the exploration of different spatial configurations even be used to run 'counter-factual' or 'what if' tests on actual spatial configurations?}
   
-  $\rightarrow$ This point was not explicit enough and we revised the presentation of our approach (which is generic and not empirical) in introduction (especially fig. 1), as already stated in comment B.3 above. We thank reviewer 2 for highlighting this limitation.
-  % \item \comment[JR]{this is a relevant remark but far beyond the scope of the paper, as an extension of what we did but with perturbation of real datasets / sensitivity to noise - Julien wanted to begin working on that actually and it should be integrated into spatialdata at some point - we also are supposed to implement such a perturbator to test the 4city model}
-  
+  $\rightarrow$ This point was not explicit enough and we revised the presentation of our approach (which is generic and not empirical) in introduction (especially fig. 1), as already stated in comment B.3 above. We thank reviewer 2 for highlighting this limitation. 
 
   \medskip
 
@@ -244,23 +241,10 @@ B. To highlight limitations as well as promising perspectives of improvement, we
  
  
   \item\textit{In this respect, I would encourage authors to further develop their closing section, which now does not stimulate readers to imagine implications of authors' findings and message to their own research.} \ldots
-  %I would expand this section to provide a more detailed discussion on implications for model makers, experts on social geography and urban scholars who work with ABM, non-specialist in geography who would like to base their models in more proper geographical constraints. And perhaps, authors could suggest future line of research that could show-case their argument. 
   
   $\rightarrow$ The discussion and conclusion was amended in this direction (see comment B).
 
-%I appreciate that models are fully available to readers. 
-%\item We do too!
-
 \end{enumerate}
-
-
-
-
-
-
-%\makeletterclosing
-
-
 
 
 
